desktop-pwas: Set the visibility of the View when the location bar shows/hides

Changes LocationBarView to also update its visibility based on the
animation state. Before this patch, we would only update the height of
the view which resulted in the LocationBarView's elements to still
be focusable, even when the bar was supposed to be hidden.

Bug: 822123
Change-Id: If8188bb11d5971072192036a4c644e3d3fb5e489
Reviewed-on: https://chromium-review.googlesource.com/1003932
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550097}
Former-commit-id: d052d4edfdd662d01910ae8b707f1a472585c13a